# arc-drone-delivery

./: .gitignore  README.md
Documentation/: Drone Delivery fab4a271703640f7884eec33e4c39d3d.md
Documentation/Drone Delivery/: Project Management ca3054da62714a6fbf0ed9418448c266.md  Related drone companies designs 2cca88c327d941879ebc7ffbfd888ad6.md  Subteams 926f90d2ad9d4c2fa26cc724d2df396a.md
Documentation/Drone Delivery/Project Management/: 2026 300d0747f56480c28adbc1d9afea1ee5.md  Drone Version 1 Completion Task List 18ad0747f564803bba95f3c9f39ee128.md  Getting started 7433b02e21074505a3a4a4e72e4ede82.md  Meeting Notes 17cd0747f5648155b04ad2449abe6393.md  People c3f1c5b6c55f4b27a6242c491275e799.csv  People c3f1c5b6c55f4b27a6242c491275e799_all.csv  Tasks 8bad96ddb7dd4cf9bf2ec82891d98b77.csv  Tasks 8bad96ddb7dd4cf9bf2ec82891d98b77_all.csv
Documentation/Drone Delivery/Subteams/: App Development 8f1d32df9bc14ccda840af9e4516cf62.md  Hardware 34e5e50468324b97b69d49fd5ed4ed2c.md  Landing 5c2425025b614305b26c7b208c340cb7.md  Navigation cd05cb2f35164e088ac4cda46245d1cd.md
Landing/zed_apriltag_streaming/: .gitignore  README.md
Landing/zed_apriltag_streaming/build_local/: CMakeCache.txt  cmake_install.cmake
Landing/zed_apriltag_streaming/build_test/: CMakeCache.txt
Landing/zed_apriltag_streaming/scripts/: build.sh  run_udp.sh  run_video.sh  run_webcam.sh
Landing/zed_apriltag_streaming/src/: apriltag_detector.hpp  calibration.cpp  cli.hpp
avoidance-viz/: .gitignore  README.md  gui.py
avoidance-viz/dstar/: astar.cpp  dstar.cpp  header.hh  main.cpp  utils.cpp
landing/test/: test  test.cpp
landing/zed_apriltag_streaming/: CMakeLists.txt  README.md
landing/zed_apriltag_streaming/assets/: calibration_example.yaml
landing/zed_apriltag_streaming/build_local/: Makefile  zed_apriltag
landing/zed_apriltag_streaming/build_local/apriltag_build/: Makefile  apriltag_detect_docstring.h  apriltag_estimate_tag_pose_docstring.h
landing/zed_apriltag_streaming/build_recheck/: CMakeCache.txt  Makefile  cmake_install.cmake  zed_apriltag
landing/zed_apriltag_streaming/build_recheck/apriltag_build/: Makefile  apriltag_demo  cmake_install.cmake  opencv_demo
landing/zed_apriltag_streaming/cmake/: CompilerWarnings.cmake
landing/zed_apriltag_streaming/scripts/: build.sh  setup_ubuntu.sh
landing/zed_apriltag_streaming/src/: apriltag_detector.cpp  calibration.hpp  cli.cpp  main.cpp  zed_gst_pipeline.cpp  zed_gst_pipeline.hpp
navigation-stack/: README.md  default.sdf  model.sdf
navigation-stack/DD_Nav_WS/: README.md  compile_commands.json  run.sh
navigation-stack/DD_Nav_WS/dd_gazebo_ws/src/vision_landing/: CMakeLists.txt  README.md  package.xml
navigation-stack/DD_Nav_WS/dd_gazebo_ws/src/vision_landing/config/: ekf.yaml
navigation-stack/DD_Nav_WS/dd_gazebo_ws/src/vision_landing/launch/: landing_pipeline.launch.py
navigation-stack/DD_Nav_WS/dd_gazebo_ws/src/vision_landing/src/: apriltag_detector.cpp  landing_controller.cpp  landing_pipeline.launch.py  mission_controller.cpp  pose_estimator.cpp  vio_node.cpp
navigation-stack/DD_Nav_WS/gazebo_apriltag/: README.md
navigation-stack/ROS2_PX4_Offboard_Example/px4_offboard/: setup.py
navigation-stack/config/: drone_nav2_params.yaml  mapper_params_online_async.yaml
navigation-stack/simple_odometry/: package.xml  setup.py
octree-generator/: .gitignore  export.osm  load.py  test.py
operations-website/: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json
operations-website/.devcontainer/: devcontainer.json  docker-compose.yml
operations-website/patches/: @merged+solid-apollo+1.7.1.patch
path-planning/: .gitignore  Makefile  README.md
path-planning/src/: README.md  constants.hpp  node.cpp  node.hpp  node_map.cpp  node_map.hpp  priority_queue.cpp  priority_queue.hpp  util.cpp  util.hpp
path-planning/tests/: README.md  maze_generator.cpp  maze_generator.hpp  path_planning_tests.cpp  path_planning_tests.hpp  pq_tests.cpp  pq_tests.hpp
previous agent chats/: Monorepo Migration Strategy.md
streaming/: README.md  docker-compose.yaml  zed.stp
(+213 files in other folders)
